# whisper-trtllm-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.1.rs  build.rs  faster.py  openai.py  openai_whisper.py  tokens.py
.devcontainer/: Dockerfile  devcontainer.json
cpp/: CMakeLists.txt  README.md  feature.cpp  feature.h  logits.h  mel.cpp  mel.h  token.h  whisper.cpp  whisper.h
examples/: transcribe copy.rs  transcribe.rs
models/: build_engine.sh  build_engine_large_v3.sh  build_engine_t4.sh  convert_checkpoint.py  download_asserts.sh  model.cache  run.bak.py  run.py  whisper_utils.py
openai/: openai.py
src/: audio copy.rs  audio.rs  features.rs  lib.rs  model.rs  spectrogram.rs  sys.rs  tokenizer.rs  transcript.rs  transcription.rs  trtllm.rs  whisper copy.rs  whisper.rs
src/diarization/sys/: kaldifeat.h  kaldifeat.rs
src/sys/: buffer.cpp  buffer.h  buffer.rs  executor.h  executor.rs  features.h  features.rs  logits.h  mel.cpp  mel.h  mel.rs  tensor.h  tensor.rs  vocab.h  whisper.cpp  whisper.h  whisper.rs
src/trtllm/: executor.cpp  executor.rs  whisper.cpp  whisper.h  whisper.rs
whisper-c/: CMakeLists.txt  whisper.cpp  whisper.h
whisper-trtllm/: CMakeLists.txt  mel.cpp  mel.h  tensor.h  whisper.cpp  whisper.h
