[package]
name = "whisper-trtllm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
cxx = { version = "1.0.140", features = ["c++20"] }
futures = "0.3.31"
scan_fmt = "0.2.6"
tokenizers = "0.21.0"
tokio = { version = "1.43.0", features = ["io-util", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.140"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.0"
hound = { version = "3.5.1" }
tokio = { version = "1.43.0", features = ["full"] }